--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "twilight",
-  "version": "0.1.0",
-  "license": "GPL",
+  "name": "razzle-examples-basic",
+  "version": "0.8.11",
+  "license": "MIT",
   "scripts": {
     "start": "razzle start",
     "build": "razzle build",
@@ -9,51 +9,12 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
-    "express": "^4.15.3",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
-    "prettier": "^1.10.2",
+    "express": "^4.15.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-dom": "^16.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.0.35",
-    "@types/jest": "^20.0.1",
-    "@types/node": "^8.0.53",
-    "@types/react": "^16.0.9",
-    "@types/react-dom": "^16.0.0",
-    "@types/react-router-dom": "^4.2.3",
-    "@types/webpack-env": "^1.13.2",
-    "isomorphic-style-loader": "^4.0.0",
-    "raf": "^3.4.0",
-    "razzle": "^0.8.7",
-    "ts-jest": "20.0.6",
-    "ts-loader": "2.3.4",
-    "tslint": "5.8.0",
-    "tslint-loader": "^3.5.3",
-    "tslint-react": "^3.2.0",
-    "typed-css-modules": "^0.3.1",
-    "typescript": "2.5.1"
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js",
-      "^.+\\.css$": "<rootDir>/node_modules/razzle/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/node_modules/razzle/config/jest/fileTransform.js"
-    },
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.(ts|js)?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).(ts|js)?(x)"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "json"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}"
-    ]
+    "raf": "^3.3.2",
+    "razzle": "^0.8.11"
   }
 }
