--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "express": "^4.15.2",
+    "prettier": "^1.10.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "semantic-ui-css": "^2.2.14",
+    "semantic-ui-react": "^0.78.2",
+    "sqlite3": "^3.1.13"
   },
   "devDependencies": {
     "raf": "^3.3.2",
