--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/sqlite3": "^3.1.1",
+    "body-parser": "^1.18.2",
     "express": "^4.15.2",
     "prettier": "^1.10.2",
     "react": "^16.0.0",
